--- a/api/src/test/resources/metadata/col.yaml
+++ b/api/src/test/resources/metadata/col.yaml
@@ -2,7 +2,11 @@ doi: 10.15468/col.grt63j
 identifier:
   col: 2278
 alias: COL21
-title: Catalogue of Life 2021
+title: Catalogue of Life Checklist
+issn: 2405-8858
+issued: 2021-06-15
+version: 2021-06-15
+
 description: |
   The Catalogue of Life (CoL) is an assembly of expert-based global species checklists with the aim to build a comprehensive catalogue of all known species of organisms on Earth.
   Continuous progress is made towards completion, but for now, it probably includes just over 80% of the world’s known species.
@@ -11,10 +15,6 @@ description: |
 
   For changes in this version see release notes at https://preview.catalogueoflife.org/2021/04/05/release.
 
-issn: 2405-8858
-issued: 2021-06-15
-version: 2021-06-15
-
 contact:
   department: Helpdesk
   organisation: Catalogue of Life
@@ -22,28 +22,28 @@ contact:
 
 creator:
   - organisation: Catalogue of Life Consortium
-
-  - givenName: Nicolas
-    familyName: Bailly
+  - given: Nicolas
+    family: Bailly
     orcid: 0000-0003-4994-0653
-  - givenName: Rainer
-    familyName: Froese
+  - given: Rainer
+    family: Froese
     orcid: 0000-0001-9745-636X
-  - givenName: Daniel
-    familyName: Pauly
+  - given: Daniel
+    family: Pauly
     orcid: 0000-0003-3756-4793
   # ... and all other GSD authors & COL team members listed here
 
 publisher:
-  organisation: Catalogue of Life
+  organisation: Species 2000 & ITIS
   city: Leiden
   country: NL
 
-distributor:
-  grid: grid.434488.7
-  organisation: Global Biodiversity Information Facility
-  city: København
-  country: DK
+contributor:
+  - grid: grid.434488.7
+    organisation: Global Biodiversity Information Facility
+    city: København
+    country: DK
+    note: hosting services
 
 geographicScope: global
 taxonomicScope: Biota
@@ -61,14 +61,14 @@ source:
     doi: 10.15468/col.u72zhs
     title: FishBase
     editor:
-      - givenName: Nicolas
-        familyName: Bailly
+      - given: Nicolas
+        family: Bailly
         orcid: 0000-0003-4994-0653
-      - givenName: Rainer
-        familyName: Froese
+      - given: Rainer
+        family: Froese
         orcid: 0000-0001-9745-636X
-      - givenName: Daniel
-        familyName: Pauly
+      - given: Daniel
+        family: Pauly
         orcid: 0000-0003-3756-4793
     year: 2021
     version: 13 April 2021
