Fix missing Citation author and add DatasetDao roundtrip test

--- a/webservice/src/main/resources/config.yaml
+++ b/webservice/src/main/resources/config.yaml
@@ -19,6 +19,7 @@ mail:
   host: smtp.gbif.org
   from: col-test@mailinator.com
   fromName: Catalogue of Life TEST
+  replyTo: col-test@mailinator.com
   bcc:
     - col-test2@mailinator.com
 db:
