Strips html from dataset title and description in yaml & eml parsing and all dataset POST/PUT via the DatasetDao. Fixes #1021

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
     <javers.version>5.6.3</javers.version>
     <jbibtex.version>1.0.18</jbibtex.version>
     <jjwt.version>0.10.7</jjwt.version>
+    <jsoup.version>1.14.1</jsoup.version>
     <junit.version>4.12</junit.version>
     <kryo-serializers.version>0.45</kryo-serializers.version>
     <kryo.version>5.0.0-RC5</kryo.version>
@@ -582,6 +583,11 @@
       </dependency>
 
       <!-- other -->
+      <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+        <version>${jsoup.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.simplejavamail</groupId>
         <artifactId>simple-java-mail</artifactId>
