--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -88,7 +88,11 @@
 		</dependency>
 
 		<!-- other -->
-        <dependency>
+      <dependency>
+        <groupId>org.jsoup</groupId>
+        <artifactId>jsoup</artifactId>
+      </dependency>
+      <dependency>
           <groupId>org.simplejavamail</groupId>
           <artifactId>simple-java-mail</artifactId>
         </dependency>
