--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.catalogueoflife</groupId>
 		<artifactId>motherpom</artifactId>
-		<version>1.0-SNAPSHOT</version>
+		<version>1.0-PT-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>dao</artifactId>
