Use newick-io lib instead of maintaining code in clb

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -51,6 +51,10 @@
           <groupId>org.catalogueoflife</groupId>
           <artifactId>doi</artifactId>
         </dependency>
+        <dependency>
+          <groupId>org.catalogueoflife</groupId>
+          <artifactId>newick-io</artifactId>
+        </dependency>
 
 		<!-- mybatis / DB -->
 		<dependency>
