--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
     <name-parser.version>3.6.4-SNAPSHOT</name-parser.version>
     <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
     <neo4j.version>3.4.17</neo4j.version>
+    <newick-io.version>1.0-SNAPSHOT</newick-io.version>
     <poi.version>5.0.0</poi.version>
     <postgresql.version>42.2.16</postgresql.version>
     <pgjdbc-ng.version>0.8.4</pgjdbc-ng.version>
@@ -137,6 +138,10 @@
     <datacite.username>col</datacite.username>
     <datacite.password>xyz</datacite.password>
     <datacite.prefix>10.80631</datacite.prefix>
+
+    <!-- Sonar -->
+    <sonar.language>java</sonar.language>
+    <sonar.projectName>COL ChecklistBank API</sonar.projectName>
   </properties>
 
   <licenses>
@@ -238,7 +243,11 @@
         <artifactId>parser</artifactId>
         <version>${project.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.catalogueoflife</groupId>
+        <artifactId>newick-io</artifactId>
+        <version>${newick-io.version}</version>
+      </dependency>
       <!-- Dropwizard -->
       <dependency>
         <groupId>io.dropwizard</groupId>
