--- a/api/pom.xml
+++ b/api/pom.xml
@@ -35,7 +35,10 @@
             <groupId>org.gbif</groupId>
             <artifactId>dwc-api</artifactId>
         </dependency>
-
+        <dependency>
+          <groupId>org.catalogueoflife</groupId>
+          <artifactId>newick-io</artifactId>
+        </dependency>
 
         <!-- mapdb & kryo -->
         <dependency>
