Fixes for ColdpTerm in its own module

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -39,6 +39,10 @@
 
 	<dependencies>
 		<!-- CoL & GBIF -->
+      <dependency>
+        <groupId>org.catalogueoflife</groupId>
+        <artifactId>coldp</artifactId>
+      </dependency>
 		<dependency>
 			<groupId>org.catalogueoflife</groupId>
 			<artifactId>api</artifactId>
