--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -99,6 +99,10 @@
     <!-- col & gbif -->
     <dependency>
       <groupId>org.catalogueoflife</groupId>
+      <artifactId>coldp</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.catalogueoflife</groupId>
       <artifactId>api</artifactId>
     </dependency>
     <dependency>
