Adds new coldp-generator module with basic SCVP support. Updates importer/exporter/API to latest CSV references in ColDP (oversight)

--- a/coldp/pom.xml
+++ b/coldp/pom.xml
@@ -10,6 +10,9 @@
   </parent>
 
   <artifactId>coldp</artifactId>
+  <name>COL Data Packages</name>
+  <description>This module provides terms for the ColDP format with minimal dependencies</description>
+
   <dependencies>
     <!-- GBIF -->
     <dependency>
