--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
     <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
     <javers.version>5.6.3</javers.version>
     <jbibtex.version>1.0.18</jbibtex.version>
+    <jcommander.version>1.81</jcommander.version>
     <jjwt.version>0.10.7</jjwt.version>
     <jsoup.version>1.14.1</jsoup.version>
     <junit.version>4.12</junit.version>
@@ -194,6 +195,7 @@
     <module>doi</module>
     <module>parser</module>
     <module>webservice</module>
+    <module>coldp-generator</module>
   </modules>
 
   <distributionManagement>
@@ -600,6 +602,11 @@
       </dependency>
 
       <!-- other -->
+      <dependency>
+        <groupId>com.beust</groupId>
+        <artifactId>jcommander</artifactId>
+        <version>${jcommander.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.jsoup</groupId>
         <artifactId>jsoup</artifactId>
