--- a/coldp-generator/pom.xml
+++ b/coldp-generator/pom.xml
@@ -13,6 +13,31 @@
   <name>ColDP Archive Generator</name>
   <description>Code to generate ColDP archives for various custom sources, e.g. WCVP</description>
 
+  <build>
+    <defaultGoal>compile exec:java</defaultGoal>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <!-- cfg is shared in motherpom -->
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <!-- override motherpom -->
+        <configuration>
+          <transformers>
+            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+              <manifestEntries>
+                <Main-Class>org.catalogueoflife.coldp.gen.GeneratorCLI</Main-Class>
+              </manifestEntries>
+            </transformer>
+          </transformers>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
   <dependencies>
     <!-- GBIF -->
     <dependency>
@@ -52,10 +77,6 @@
       <artifactId>univocity-parsers</artifactId>
     </dependency>
     <!-- templating -->
-    <dependency>
-      <groupId>org.freemarker</groupId>
-      <artifactId>freemarker</artifactId>
-    </dependency>
     <dependency>
       <groupId>com.beust</groupId>
       <artifactId>jcommander</artifactId>
