Fix reference handling in coldp imports

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -153,6 +153,10 @@
             <artifactId>fastutil</artifactId>
         </dependency>
         <dependency>
+          <groupId>com.univocity</groupId>
+          <artifactId>univocity-parsers</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
