--- a/pom.xml
+++ b/pom.xml
@@ -50,19 +50,19 @@
     <antlr.version>4.7.2</antlr.version>
     <asm.version></asm.version>
     <assertj.version>3.11.1</assertj.version>
-    <citeproc.version>3.0.0-SNAPSHOT</citeproc.version>
+    <citeproc.version>3.0.0-alpha.2</citeproc.version>
     <citeproc-styles.version>2.0.0</citeproc-styles.version>
     <commons-collections4.version>4.3</commons-collections4.version>
     <commons-compress.version>1.19</commons-compress.version>
     <commons-io.version>2.6</commons-io.version>
-    <dropwizard.version>2.0.21</dropwizard.version>
+    <dropwizard.version>2.0.25</dropwizard.version>
     <dwc-api.version>1.34</dwc-api.version>
-    <dwca-io.version>2.9</dwca-io.version>
+    <dwca-io.version>2.11</dwca-io.version>
     <elasticsearch.version>7.4.2</elasticsearch.version>
-    <fastutil.version>8.3.0</fastutil.version>
+    <fastutil.version>8.5.6</fastutil.version>
     <ganglia.version>1.0.7</ganglia.version>
-    <gbif-api.version>0.99</gbif-api.version>
-    <hikaricp.version>3.3.1</hikaricp.version>
+    <gbif-api.version>0.156</gbif-api.version>
+    <hikaricp.version>5.0.0</hikaricp.version>
     <hk2.version>2.5.0-b32</hk2.version>
     <!-- even though managed in DW BOM, it conflicts with ES BOM and we gotta manage this manually -->
     <httpcore.version>4.4.12</httpcore.version>
@@ -71,10 +71,10 @@
     <java-diff-utils.version>4.0</java-diff-utils.version>
     <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
     <javers.version>5.6.3</javers.version>
-    <jbibtex.version>1.0.18</jbibtex.version>
+    <jbibtex.version>1.0.19</jbibtex.version>
     <jcommander.version>1.81</jcommander.version>
     <jjwt.version>0.10.7</jjwt.version>
-    <jsoup.version>1.14.1</jsoup.version>
+    <jsoup.version>1.14.3</jsoup.version>
     <junit.version>4.12</junit.version>
     <kryo-serializers.version>0.45</kryo-serializers.version>
     <kryo.version>5.0.0-RC5</kryo.version>
@@ -87,18 +87,18 @@
     <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
     <neo4j.version>3.4.17</neo4j.version>
     <newick-io.version>1.0-SNAPSHOT</newick-io.version>
-    <poi.version>5.0.0</poi.version>
-    <postgresql.version>42.2.16</postgresql.version>
+    <poi.version>5.1.0</poi.version>
+    <postgresql.version>42.3.1</postgresql.version>
     <pgjdbc-ng.version>0.8.4</pgjdbc-ng.version>
-    <simple-java-.version>6.5.2</simple-java-.version>
+    <simple-mail.version>6.6.1</simple-mail.version>
     <stax2.version>4.2</stax2.version>
     <text-tree.version>1.0.0</text-tree.version>
     <tika.version>1.22</tika.version>
-    <twelvemonkeys.version>3.4.2</twelvemonkeys.version>
+    <twelvemonkeys.version>3.7.0</twelvemonkeys.version>
     <validation-api.version>2.0.0.Final</validation-api.version>
     <woodstox.version>4.4.1</woodstox.version>
     <imgscalr.version>4.2</imgscalr.version>
-    <univocity-parsers.version>2.8.3</univocity-parsers.version>
+    <univocity-parsers.version>2.9.1</univocity-parsers.version>
 
     <!-- Maven plugin versions. Check for available updates: mvn versions:display-plugin-updates -->
     <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
@@ -615,7 +615,7 @@
       <dependency>
         <groupId>org.simplejavamail</groupId>
         <artifactId>simple-java-mail</artifactId>
-        <version>${simple-java-.version}</version>
+        <version>${simple-mail.version}</version>
       </dependency>
       <dependency>
         <groupId>io.github.java-diff-utils</groupId>
