--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
     <citeproc-styles.version>2.0.0</citeproc-styles.version>
     <commons-collections4.version>4.3</commons-collections4.version>
     <commons-compress.version>1.19</commons-compress.version>
-    <commons-io.version>2.6</commons-io.version>
+    <commons-io.version>2.11.0</commons-io.version>
     <dropwizard.version>2.0.25</dropwizard.version>
     <dwc-api.version>1.34</dwc-api.version>
     <dwca-io.version>2.11</dwca-io.version>
@@ -101,6 +101,7 @@
     <univocity-parsers.version>2.9.1</univocity-parsers.version>
 
     <!-- Maven plugin versions. Check for available updates: mvn versions:display-plugin-updates -->
+    <depgraph-maven-plugin>3.3.0</depgraph-maven-plugin>
     <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
     <jaxb2_commons.version>0.12.0</jaxb2_commons.version>
     <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
@@ -723,6 +724,11 @@
     <pluginManagement>
       <plugins>
         <plugin>
+          <groupId>com.github.ferstl</groupId>
+          <artifactId>depgraph-maven-plugin</artifactId>
+          <version>${depgraph-maven-plugin}</version>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-clean-plugin</artifactId>
           <version>${maven-clean-plugin.version}</version>
@@ -1039,6 +1045,47 @@
                 </goals>
               </execution>
             </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <!--
+      shows module dependencies as dot and png file in target folder. Use with just
+      mvn -P modgraph
+      -->
+      <id>modgraph</id>
+      <build>
+        <defaultGoal>depgraph:aggregate</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>com.github.ferstl</groupId>
+            <artifactId>depgraph-maven-plugin</artifactId>
+            <configuration>
+              <includes>org.catalogueoflife</includes>
+              <showConflicts>true</showConflicts>
+              <createImage>true</createImage>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <!--
+      shows all aggregated dependencies as dot and png file in target folder
+      mvn -P graph
+      -->
+      <id>graph</id>
+      <build>
+        <defaultGoal>depgraph:aggregate</defaultGoal>
+        <plugins>
+          <plugin>
+            <groupId>com.github.ferstl</groupId>
+            <artifactId>depgraph-maven-plugin</artifactId>
+            <configuration>
+              <showConflicts>true</showConflicts>
+              <createImage>true</createImage>
+            </configuration>
           </plugin>
         </plugins>
       </build>
