--- a/coldp-generator/pom.xml
+++ b/coldp-generator/pom.xml
@@ -15,6 +15,12 @@
 
   <build>
     <defaultGoal>compile exec:java</defaultGoal>
+    <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
