--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -89,6 +89,10 @@
 
 		<!-- other -->
       <dependency>
+        <groupId>com.github.ben-manes.caffeine</groupId>
+        <artifactId>caffeine</artifactId>
+      </dependency>
+      <dependency>
         <groupId>org.jsoup</groupId>
         <artifactId>jsoup</artifactId>
       </dependency>
