--- a/parser/pom.xml
+++ b/parser/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.catalogueoflife</groupId>
     <artifactId>motherpom</artifactId>
-    <version>1.0-PT-SNAPSHOT</version>
+    <version>1.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>parser</artifactId>
