--- a/coldp-generator/pom.xml
+++ b/coldp-generator/pom.xml
@@ -82,6 +82,10 @@
       <groupId>com.univocity</groupId>
       <artifactId>univocity-parsers</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+    </dependency>
     <!-- templating -->
     <dependency>
       <groupId>com.beust</groupId>
