Add diacritics detection and ICTV coldp generator

--- a/pom.xml
+++ b/pom.xml
@@ -630,6 +630,11 @@
       </dependency>
       <dependency>
         <groupId>org.apache.poi</groupId>
+        <artifactId>poi</artifactId>
+        <version>${poi.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.poi</groupId>
         <artifactId>poi-ooxml</artifactId>
         <version>${poi.version}</version>
       </dependency>
