--- a/coldp-generator/pom.xml
+++ b/coldp-generator/pom.xml
@@ -86,6 +86,10 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+    </dependency>
     <!-- templating -->
     <dependency>
       <groupId>com.beust</groupId>
