Finish ICTV generator for data and most metadata but sources

--- a/pom.xml
+++ b/pom.xml
@@ -190,12 +190,13 @@
   </repositories>
 
   <modules>
-    <module>coldp</module>
     <module>api</module>
     <module>dao</module>
     <module>doi</module>
     <module>parser</module>
     <module>webservice</module>
+    <module>coldp</module>
+    <module>coldp-metadata</module>
     <module>coldp-generator</module>
   </modules>
 
@@ -216,6 +217,11 @@
       <dependency>
         <groupId>org.catalogueoflife</groupId>
         <artifactId>coldp</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.catalogueoflife</groupId>
+        <artifactId>coldp-metadata</artifactId>
         <version>${project.version}</version>
       </dependency>
       <dependency>
