--- a/coldp-generator/pom.xml
+++ b/coldp-generator/pom.xml
@@ -56,7 +56,15 @@
     </dependency>
     <dependency>
       <groupId>org.catalogueoflife</groupId>
+      <artifactId>coldp-metadata</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.catalogueoflife</groupId>
       <artifactId>api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.catalogueoflife</groupId>
+      <artifactId>doi</artifactId>
     </dependency>
     <dependency>
       <groupId>org.gbif</groupId>
