--- a/coldp-generator/pom.xml
+++ b/coldp-generator/pom.xml
@@ -56,7 +56,7 @@
     </dependency>
     <dependency>
       <groupId>org.catalogueoflife</groupId>
-      <artifactId>coldp-metadata</artifactId>
+      <artifactId>metadata</artifactId>
     </dependency>
     <dependency>
       <groupId>org.catalogueoflife</groupId>
