Fix IdProvider to work with canceled or deleted releases without attempts yet

--- a/coldp-generator/pom.xml
+++ b/coldp-generator/pom.xml
@@ -98,6 +98,11 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.github.scribejava</groupId>
+      <artifactId>scribejava-apis</artifactId>
+    </dependency>
+
     <!-- templating -->
     <dependency>
       <groupId>com.beust</groupId>
