Allow empty strings for root, see https://github.com/CatalogueOfLife/checklistbank/issues/1011

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ dao/dataset/
 webservice/graphs/
 webservice/localhost/
 webservice/config-*.yaml
+webservice/**/ManualLiveDebugging.java
 
 **/.DS_Store
 **/.project
