Use Jena to parse newer turtle rdf files for the geotimes and update to 2020 version

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -176,6 +176,18 @@
 
     <!-- TEST SCOPE -->
     <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-core</artifactId>
+      <scope>test</scope>
+      <version>4.6.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.jena</groupId>
+      <artifactId>jena-tdb</artifactId>
+      <scope>test</scope>
+      <version>4.6.1</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <scope>test</scope>
