--- a/pom.xml
+++ b/pom.xml
@@ -56,13 +56,13 @@
     <commons-compress.version>1.19</commons-compress.version>
     <commons-io.version>2.11.0</commons-io.version>
     <dropwizard.version>2.0.28</dropwizard.version>
-    <dwc-api.version>1.36</dwc-api.version>
-    <dwca-io.version>2.11</dwca-io.version>
+    <dwc-api.version>1.37</dwc-api.version>
+    <dwca-io.version>2.13</dwca-io.version>
     <elasticsearch.version>8.1.1</elasticsearch.version>
-    <fastutil.version>8.5.6</fastutil.version>
+    <fastutil.version>8.5.9</fastutil.version>
     <ganglia.version>1.0.7</ganglia.version>
-    <gbif-api.version>0.156</gbif-api.version>
-    <hikaricp.version>5.0.0</hikaricp.version>
+    <gbif-api.version>0.174</gbif-api.version>
+    <hikaricp.version>5.0.1</hikaricp.version>
     <hk2.version>2.5.0-b32</hk2.version>
     <!-- even though managed in DW BOM, it conflicts with ES BOM and we gotta manage this manually -->
     <httpcore.version>4.4.12</httpcore.version>
@@ -71,24 +71,24 @@
     <java-diff-utils.version>4.0</java-diff-utils.version>
     <javax.ws.rs-api.version>2.0.1</javax.ws.rs-api.version>
     <javers.version>5.6.3</javers.version>
-    <jbibtex.version>1.0.19</jbibtex.version>
-    <jcommander.version>1.81</jcommander.version>
+    <jbibtex.version>1.0.20</jbibtex.version>
+    <jcommander.version>1.82</jcommander.version>
     <jjwt.version>0.10.7</jjwt.version>
-    <jsoup.version>1.14.3</jsoup.version>
+    <jsoup.version>1.15.3</jsoup.version>
     <junit.version>4.12</junit.version>
     <kryo-serializers.version>0.45</kryo-serializers.version>
-    <kryo.version>5.0.0-RC5</kryo.version>
+    <kryo.version>5.3.0</kryo.version>
     <kryo-reflectasm.version>1.11.9</kryo-reflectasm.version>
     <logstash-logback.version>6.4</logstash-logback.version>
-    <mapdb.version>3.0.5</mapdb.version>
+    <mapdb.version>3.0.8</mapdb.version>
     <mockito.version>3.1.0</mockito.version>
-    <mybatis.version>3.5.2</mybatis.version>
+    <mybatis.version>3.5.11</mybatis.version>
     <name-parser.version>3.7.3-SNAPSHOT</name-parser.version>
     <neo4j-algorithms.version>3.4.0.0</neo4j-algorithms.version>
     <neo4j.version>3.4.17</neo4j.version>
     <newick-io.version>1.0.6</newick-io.version>
-    <poi.version>5.1.0</poi.version>
-    <postgresql.version>42.3.3</postgresql.version>
+    <poi.version>5.2.3</poi.version>
+    <postgresql.version>42.5.0</postgresql.version>
     <scribejava.version>8.3.1</scribejava.version>
     <simple-mail.version>6.6.1</simple-mail.version>
     <stax2.version>4.2</stax2.version>
