Apply the same common configs to both csv and tsv readers

--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -35,6 +35,25 @@
             </excludes>
           </testResource>
 		</testResources>
+
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <configuration>
+            <!--
+            Run tests in parallel with the same JVM by default for all modules.
+            Some modules run tests that share static information and will override this configuration.
+            See https://maven.apache.org/surefire/maven-surefire-plugin/examples/fork-options-and-parallel-execution.html
+
+            -->
+            <parallel>none</parallel>
+            <useUnlimitedThreads>false</useUnlimitedThreads>
+            <forkCount>4</forkCount>
+            <reuseForks>false</reuseForks>
+          </configuration>
+        </plugin>
+      </plugins>
 	</build>
 
 	<dependencies>
