--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -45,12 +45,11 @@
             Run tests in parallel with the same JVM by default for all modules.
             Some modules run tests that share static information and will override this configuration.
             See https://maven.apache.org/surefire/maven-surefire-plugin/examples/fork-options-and-parallel-execution.html
-
             -->
             <parallel>none</parallel>
             <useUnlimitedThreads>false</useUnlimitedThreads>
             <forkCount>4</forkCount>
-            <reuseForks>false</reuseForks>
+            <reuseForks>true</reuseForks>
           </configuration>
         </plugin>
       </plugins>
